[gd_scene load_steps=7 format=3 uid="uid://cxkx7sno0wo44"]

[ext_resource type="Script" uid="uid://dobqxfl0qjwsp" path="res://addons/audio_manager/ui/window.gd" id="1_uu3g4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu3g4"]
bg_color = Color(0.417791, 0.573971, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yq6uv"]
bg_color = Color(4.23551e-06, 0.629239, 0.981768, 1)

[sub_resource type="Theme" id="Theme_uu3g4"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_uu3g4")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_yq6uv")
Window/colors/title_outline_modulate = Color(0.619608, 0, 0, 1)
Window/icons/close = null
Window/icons/close_pressed = null

[sub_resource type="ImageTexture" id="ImageTexture_uu3g4"]

[sub_resource type="ImageTexture" id="ImageTexture_yq6uv"]

[node name="Window" type="Window"]
title = "Audio Manager by Cabage"
position = Vector2i(0, 36)
size = Vector2i(1000, 600)
theme = SubResource("Theme_uu3g4")
theme_override_icons/close = SubResource("ImageTexture_uu3g4")
theme_override_icons/close_pressed = SubResource("ImageTexture_yq6uv")
script = ExtResource("1_uu3g4")

[node name="BG" type="Panel" parent="."]
offset_left = -112.0
offset_top = -165.0
offset_right = 1092.0
offset_bottom = 683.0

[node name="Label" type="Label" parent="."]
offset_left = 6.0
offset_top = 16.0
offset_right = 135.0
offset_bottom = 39.0
text = "LOADED AUDIOS"

[node name="search" type="TextEdit" parent="."]
offset_left = 346.0
offset_top = 9.0
offset_right = 646.0
offset_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 895.0
offset_top = 7.0
offset_right = 994.0
offset_bottom = 108.0

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="Close" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close
"

[node name="Audios" type="ScrollContainer" parent="."]
offset_left = 2.0
offset_top = 61.0
offset_right = 869.0
offset_bottom = 598.0

[node name="v_box" type="VBoxContainer" parent="Audios"]
layout_mode = 2

[connection signal="text_changed" from="search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="_on_close_pressed"]
